upload attachment, update swagger
